--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HTML Form</title>
   <link rel="stylesheet" href="./style.css">
@@ -27,7 +26,14 @@
       <div class="box">
         <label for="age">
           How old are You?
-          <input type="number" name="age" id="age" min="1" max="100" value="12">
+          <input
+          type="number"
+          name="age"
+          id="age"
+          min="1"
+          max="100"
+          value="12"
+          >
         </label>
       </div>
       <div class="box">
@@ -48,14 +54,27 @@
       <div class="box">
         <label for="email">
           E-mail:
-          <input type="email" name="email" id="email" minlength="12" maxlength="30" placeholder="email@example.com"
-            required>
+          <input
+          type="email"
+          name="email"
+          id="email"
+          minlength="12"
+          maxlength="30"
+          placeholder="email@example.com"
+          required
+          >
         </label>
       </div>
       <div class="box">
         <label for="pass">
           Password:
-          <input type="password" name="password" id="pass" minlength="8" required>
+          <input
+          type="password"
+          name="password"
+          id="pass"
+          minlength="8"
+          required
+          >
         </label>
       </div>
     </fieldset>
@@ -64,7 +83,12 @@
       <div class="box">
         <label for="yes">
           Do you love cats?
-          <input type="radio" name="yes" id="yes" checked>
+          <input
+          type="radio"
+          name="yes"
+          id="yes"
+          checked
+          >
           Yes
         </label>
         <label for="no">
@@ -74,7 +98,12 @@
       <div class="box">
         <label for="col">
           What is your favorite color?
-          <input type="color" name="col" id="col" value="#000">
+          <input
+          type="color"
+          name="col"
+          id="col"
+          value="#000"
+          >
         </label>
       </div>
       <div class="box">
@@ -96,7 +125,14 @@
       <div class="box">
         <label for="rate">
           How do you rate our team?
-          <input type="range" name="rate" id="rate" min="0" max="5" value="0">
+          <input
+          type="range"
+          name="rate"
+          id="rate"
+          min="0"
+          max="5"
+          value="0"
+          >
         </label>
       </div>
     </fieldset>
@@ -105,13 +141,18 @@
       <div class="box">
         <label for="comments">
           Comments:
-          <textarea name="comments" id="comments" cols="12" rows="2"></textarea>
+          <textarea
+          name="comments"
+          id="comments"
+          cols="12"
+          rows="2"
+          ></textarea>
         </label>
       </div>
       <div class="box">
-        <label for="recommend">
+        <label for="review">
           Would you recommend us?
-          <select id="recommend">
+          <select id="review">
             <option value="yes">yes</option>
             <option value="no">no</option>
           </select>
