--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,12 @@
         <label for="age">
           How old are You?
           <input
-          type="number"
-          name="age"
-          id="age"
-          min="1"
-          max="100"
-          value="12"
+            type="number"
+            name="age"
+            id="age"
+            min="1"
+            max="100"
+            value="12"
           >
         </label>
       </div>
@@ -55,13 +55,13 @@
         <label for="email">
           E-mail:
           <input
-          type="email"
-          name="email"
-          id="email"
-          minlength="12"
-          maxlength="30"
-          placeholder="email@example.com"
-          required
+            type="email"
+            name="email"
+            id="email"
+            minlength="12"
+            maxlength="30"
+            placeholder="email@example.com"
+            required
           >
         </label>
       </div>
@@ -69,11 +69,11 @@
         <label for="pass">
           Password:
           <input
-          type="password"
-          name="password"
-          id="pass"
-          minlength="8"
-          required
+            type="password"
+            name="password"
+            id="pass"
+            minlength="8"
+            required
           >
         </label>
       </div>
@@ -81,28 +81,28 @@
     <fieldset>
       <legend>An intresting fact about you!</legend>
       <div class="box">
-        <label for="yes">
+        <label>
           Do you love cats?
           <input
-          type="radio"
-          name="yes"
-          id="yes"
-          checked
+            type="radio"
+            name="yes"
+            id="yes"
+            checked
           >
           Yes
         </label>
-        <label for="no">
+        <label>
           <input type="radio" name="no" id="no">No
         </label>
       </div>
       <div class="box">
-        <label for="col">
+        <label for="color">
           What is your favorite color?
           <input
-          type="color"
-          name="col"
-          id="col"
-          value="#000"
+            type="color"
+            name="color"
+            id="color"
+            value="#000"
           >
         </label>
       </div>
@@ -123,15 +123,15 @@
         </label>
       </div>
       <div class="box">
-        <label for="rate">
+        <label>
           How do you rate our team?
           <input
-          type="range"
-          name="rate"
-          id="rate"
-          min="0"
-          max="5"
-          value="0"
+            type="range"
+            name="rate"
+            id="rate"
+            min="0"
+            max="5"
+            value="0"
           >
         </label>
       </div>
@@ -142,15 +142,15 @@
         <label for="comments">
           Comments:
           <textarea
-          name="comments"
-          id="comments"
-          cols="12"
-          rows="2"
+            name="comments"
+            id="comments"
+            cols="12"
+            rows="2"
           ></textarea>
         </label>
       </div>
       <div class="box">
-        <label for="review">
+        <label>
           Would you recommend us?
           <select id="review">
             <option value="yes">yes</option>
